Fix lintian errors related to Scibian

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-scibian-singularity-ssh (0.1) calibre9; urgency=medium
+scibian-singularity-ssh (0.1) scibian8; urgency=medium
 
   * Initial Release.
 
