--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scibian-singularity-ssh (0.2) scibian9; urgency=medium
+
+  * Build for Scibian 9
+
+ -- Gilles Filippini <gilles.filippini@edf.fr>  Mon, 07 Dec 2020 13:47:19 +0100
+
 scibian-singularity-ssh (0.1) scibian8; urgency=medium
 
   * Initial Release.
