--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+scibian-singularity-ssh (0.4) scibian10; urgency=medium
+
+  * Use 'singularity exec <img> bash -c "<cmd>"' to cope with commands being
+    shellscript snippets
+
+ -- Gilles Filippini <gilles.filippini@edf.fr>  Fri, 18 Jun 2021 15:10:48 +0200
+
 scibian-singularity-ssh (0.3) scibian10; urgency=medium
 
   * Build for Scibian 10
